--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>baeta </title>
     <link rel="shortcut icon" href="assets/disc-fill.svg" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
     <div class="main">
         <div class="left">
             <h1>meu primeiro HTML </h1>
-            <img src="" alt="">
+            <img src="assets/DJ party-rafiki.svg" alt="">
         </div>
 
         <div class="right">
